--- a/index.html
+++ b/index.html
@@ -5,8 +5,191 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a>
+              <img src="#" alt="Логотип Седоны">
+            </a>
+          </li>
+          <li>
+            <a>Главная</a>
+          </li>
+          <li>
+            <a>О Седоне</a>
+          </li>
+          <li>
+            <a href="catalog.html">Гостиницы</a>
+          </li>
+        </uL>
+        <ul>
+          <li><a href="#"><span class="visually-hidden">Поиск</span></a></li>
+          <li><a href="#"><span class="visually-hidden">Избранное</span></a></li>
+          <li><a href="#">ХОЧУ СЮДА!</a></li>
+        </ul>
+      </nav>
+      <h1 class="visually-hidden">
+        Добро пожаловать в Седону
+      </h1>
+      <img src="#" alt="Фото каньона с декоративным текстом">
+    </header>
+    <main>
+      <section>
+        <h2>
+          Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
+        </h2>
+        <p>
+          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+        <ul>
+          <li>
+            <h3>
+              Настоящий городок
+            </h3>
+            <p>
+              Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+          </li>
+          <li>
+            <div></div>
+          </li>
+          <li>
+            <h3>
+              Небольшая площадь
+            </h3>
+            <p>
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
+          <li>
+            <h3>
+              Красивая дорога
+            </h3>
+            <p>
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+          <li>
+            <h3>
+              Мало туристов
+            </h3>
+            <p>
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
+          <li>
+            <div></div>
+          </li>
+          <li>
+            <h3>
+              Там есть мост дьявола
+            </h3>
+            <p>
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+          </li>
+        </ul>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+      <section>
+        <h2>
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p>
+          Опытный персонал и качественное обслуживание!
+        </p>
+        <ul>
+          <li>
+            <h3>
+              Жильё
+            </h3>
+            <p>
+              Рекомендуем пожить в настоящем мотеле, всё как в кино
+            </p>
+            <svg></svg>
+          </li>
+          <li>
+            <h3>
+              Еда
+            </h3>
+            <p>
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь
+            </p>
+            <svg></svg>
+          </li>
+          <li>
+            <h3>
+              Сувениры
+            </h3>
+            <p>
+              Не только китайского, но и настоящего местного производства!
+            </p>
+            <svg></svg>
+          </li>
+        </ul>
+      </section>
 
+      <section>
+        <h2>
+          Заинтересовались?
+        </h2>
+        <p>
+          Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
+        <a href="catalog.html">Поиск гостиницы в Седоне</a>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>
+          Подпишитесь на рассылку
+        </h2>
+        <p>
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form action="https://echo.htmlacademy.ru/" method="post">
+          <label>
+            <input type="email" name="newsletter-email" placeholder="Ваш e-mail">
+          </label>
+          <button type="submit">Подписаться</button>
+        </form>
+      </section>
+
+      <section>
+        <h2 class="visually-hidden">
+          Связяться с нами
+        </h2>
+        <ul>
+          <li>
+            <a href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">
+                ВКонтакте
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="https://t.me/htmlacademy ">
+              <span class="visually-hidden">
+                Телеграм
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">
+                YouTube
+              </span>
+            </a>
+          </li>
+        </ul>
+        <a href="tel:+78128121212">
+          +7 (812) 812-12-12
+        </a>
+        <a href="https://htmlacademy.ru">
+          <img src="#" alt="HTML Academy">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
