--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
         <ul>
           <li>
             <a>
-              <img src="#" alt="Логотип Седоны">
+              <img src="./images/header/logo.svg" width="140" height="70" alt="Логотип Седоны">
             </a>
           </li>
           <li>
@@ -20,19 +20,27 @@
             <a>О Седоне</a>
           </li>
           <li>
-            <a href="">Гостиницы</a>
+            <a href="./catalog.html">Гостиницы</a>
           </li>
         </uL>
         <ul>
-          <li><a href=""><span class="visually-hidden">Поиск</span></a></li>
-          <li><a href=""><span class="visually-hidden">Избранное</span></a></li>
-          <li><a href="">ХОЧУ СЮДА!</a></li>
+          <li>
+            <a href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="visually-hidden">
+                Избранное
+              </span>
+              </a>
+            </li>
+          <li><a href="#">Хочу сюда!</a></li>
         </ul>
       </nav>
-      <h1 class="visually-hidden">
-        Добро пожаловать в Седону
-      </h1>
-      <img src="#" alt="Фото каньона с декоративным текстом">
     </header>
     <main>
       <section>
@@ -42,7 +50,7 @@
         <ul>
           <li>
             <a href="index.html">
-              <img src="#" alt="На Главную">
+              <img src="./images/catalog/homepage.svg" alt="На Главную">
             </a>
           </li>
           <li>
@@ -139,12 +147,14 @@
               --->
             </div>
           </fieldset>
+          <button type="submit">Принять</button>
+          <button type="reset">Сбросить</button>
         </form>
       </section>
 
       <section>
         <h2>
-          НАЙДЕНО ГОСТИНИЦ: 38
+          Найдено гостиниц:<span>38</span>
         </h2>
         <select aria-label="Сортировка">
           <option value="cheap">
@@ -175,7 +185,7 @@
         <ul>
           <li>
             <a href="#">
-              <img src="#" alt="Фото ночного неба из пещеры">
+              <img src="./images/catalog/hotels/hotel-1.jpg" alt="Фото ночного неба из пещеры">
               <h3>
                 Amara Resort & Spa
               </h3>
@@ -187,16 +197,16 @@
               От 4000 ₽
             </b>
             <a href="#">
-              ПОДРОБНЕЕ
+              Подробнее
             </a>
             <button type="button">
-              В ИЗБРАННОЕ
+              В избранное
             </button>
-            РЕЙТИНГ: 8,5
+            Рейтинг: 8,5
           </li>
           <li>
             <a href="#">
-              <img src="#" alt="Фото каньона с радугой на фоне">
+              <img src="./images/catalog/hotels/hotel-2.jpg" alt="Фото каньона с радугой на фоне">
               <h3>
                 Villas at Poco Diablo
               </h3>
@@ -208,16 +218,16 @@
               От 5000 ₽
             </b>
             <a href="#">
-              ПОДРОБНЕЕ
+              Подробнее
             </a>
             <button type="button">
-              В ИЗБРАННОЕ
+              В избранное
             </button>
-            РЕЙТИНГ: 9,2
+            Рейтинг: 9,2
           </li>
           <li>
             <a href="#">
-              <img src="#" alt="Заросшая зеленью гора">
+              <img src="./images/catalog/hotels/hotel-3.jpg" alt="Заросшая зеленью гора">
               <h3>
                 Desert Quail Inn
               </h3>
@@ -229,16 +239,16 @@
               От 2500 ₽
             </b>
             <a href="#">
-              ПОДРОБНЕЕ
+              Подробнее
             </a>
             <button type="button">
-              В ИЗБРАННОЕ
+              В избранное
             </button>
-            РЕЙТИНГ: 6,9
+            Рейтинг: 6,9
           </li>
           <li>
             <a href="#">
-              <img src="#" alt="Фото каньона на фоне заката">
+              <img src="./images/catalog/hotels/hotel-4.jpg" alt="Фото каньона на фоне заката">
               <h3>
                 GreenTree Inn
               </h3>
@@ -250,12 +260,12 @@
               От 1500 ₽
             </b>
             <a href="#">
-              ПОДРОБНЕЕ
+              Подробнее
             </a>
             <button type="button">
-              В ИЗБРАННОЕ
+              В избранное
             </button>
-            РЕЙТИНГ: 5,0
+            Рейтинг: 5,0
           </li>
         </ul>
         <ol>
@@ -331,7 +341,7 @@
           +7 (812) 812-12-12
         </a>
         <a href="https://htmlacademy.ru">
-          <img src="#" alt="HTML Academy">
+          <img src="./images/footer/academy.svg" width="115" height="33" alt="HTML Academy">
         </a>
       </section>
     </footer>
