--- a/catalog.html
+++ b/catalog.html
@@ -2,11 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navigation">
         <ul>
           <li>
             <a>
@@ -14,39 +15,43 @@
             </a>
           </li>
           <li>
-            <a>Главная</a>
+            <a class="" href="./index.html">Главная</a>
           </li>
           <li>
-            <a>О Седоне</a>
+            <a class="" href="#">О Седоне</a>
           </li>
           <li>
-            <a href="./catalog.html">Гостиницы</a>
+            <a class="navigation-current" href="#">Гостиницы</a>
           </li>
         </uL>
         <ul>
           <li>
-            <a href="#">
+            <a class="menu-misc search" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a class="menu-misc favorite" href="#">
               <span class="visually-hidden">
                 Избранное
               </span>
               </a>
             </li>
-          <li><a href="#">Хочу сюда!</a></li>
+          <li>
+            <a class="button" href="#">
+              Хочу сюда!
+            </a>
+          </li>
         </ul>
       </nav>
     </header>
     <main>
-      <section>
-        <h2>
+      <section class="filters">
+        <h1>
           Гостиницы Седоны
-        </h2>
+        </h1>
         <ul>
           <li>
             <a href="index.html">
@@ -59,15 +64,12 @@
             </a>
           </li>
         </ul>
-      </section>
-
-      <section>
         <h2 class="visually-hidden">
           Фильтры
         </h2>
         <form action="https://echo.htmlacademy.ru/" method="get">
           <fieldset>
-            <legend>
+            <legend class="filters-list">
               Инфраструктура:
             </legend>
             <ul>
@@ -93,7 +95,7 @@
           </fieldset>
 
           <fieldset>
-            <legend>
+            <legend class="filters-list">
               Тип Жилья:
             </legend>
             <ul>
@@ -119,7 +121,7 @@
           </fieldset>
 
           <fieldset>
-            <legend>
+            <legend class="filters-list">
               Стоимость,₽:
             </legend>
             <div class="range">
@@ -147,8 +149,8 @@
               --->
             </div>
           </fieldset>
-          <button type="submit">Принять</button>
-          <button type="reset">Сбросить</button>
+          <button class="button button-secondary" type="submit">Принять</button>
+          <button class="button button-tertiary" type="reset">Сбросить</button>
         </form>
       </section>
 
@@ -193,16 +195,18 @@
             <span>
               Гостиница
             </span>
-            <b>
+            <span>
               От 4000 ₽
-            </b>
-            <a href="#">
+            </span>
+            <a class="button" href="#">
               Подробнее
             </a>
-            <button type="button">
+            <button class="button button-secondary" type="button">
               В избранное
             </button>
-            Рейтинг: 8,5
+            <span class="rating">
+              Рейтинг: 8,5
+            </span>
           </li>
           <li>
             <a href="#">
@@ -214,16 +218,18 @@
             <span>
               Гостиница
             </span>
-            <b>
+            <span>
               От 5000 ₽
-            </b>
-            <a href="#">
+            </s>
+            <a class="button" href="#">
               Подробнее
             </a>
-            <button type="button">
+            <button class="button button-favorite" type="button">
               В избранное
             </button>
-            Рейтинг: 9,2
+            <span class="rating">
+              Рейтинг: 9,2
+            </span>
           </li>
           <li>
             <a href="#">
@@ -235,16 +241,18 @@
             <span>
               Гостиница
             </span>
-            <b>
+            <span>
               От 2500 ₽
-            </b>
-            <a href="#">
+            </span>
+            <a class="button" href="#">
               Подробнее
             </a>
-            <button type="button">
+            <button class="button button-secondary" type="button">
               В избранное
             </button>
-            Рейтинг: 6,9
+            <span class="rating">
+              Рейтинг: 6,9
+            </span>
           </li>
           <li>
             <a href="#">
@@ -256,37 +264,39 @@
             <span>
               Гостиница
             </span>
-            <b>
+            <span>
               От 1500 ₽
-            </b>
-            <a href="#">
+            </span>
+            <a class="button" href="#">
               Подробнее
             </a>
-            <button type="button">
+            <button class="button button-secondary" type="button">
               В избранное
             </button>
-            Рейтинг: 5,0
+            <span class="rating">
+              Рейтинг: 5,0
+            </span>
           </li>
         </ul>
         <ol>
-          <li>
+          <li class="pagination pagination-current">
             <a href="#">1</a>
           </li>
-          <li>
+          <li class="pagination">
             <a href="#">2</a>
           </li>
-          <li>
+          <li class="pagination">
             <a href="#">3</a>
           </li>
-          <li>
+          <li class="pagination">
             <a href="#">4</a>
           </li>
-          <li>
+          <li class="pagination pagination-blank">
             <span>
               ...
             </span>
           </li>
-          <li>
+          <li class="pagination">
             <a href="#">
               10
             </a>
@@ -295,7 +305,7 @@
       </section>
     </main>
     <footer>
-      <section>
+      <section class="subscribe subscribe-catalog">
         <h2>
           Подпишитесь на рассылку
         </h2>
@@ -306,38 +316,32 @@
           <label>
             <input type="email" name="newsletter-email" placeholder="Ваш e-mail">
           </label>
-          <button type="submit">Подписаться</button>
+          <button class="button button-secondary" type="submit">Подписаться</button>
         </form>
       </section>
 
       <section>
         <h2 class="visually-hidden">
-          Связяться с нами
+          Связаться с нами
         </h2>
         <ul>
-          <li>
+          <li class="social">
             <a href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">
-                ВКонтакте
-              </span>
+              <img src="./images/footer/VK.svg" width="24" height="14" alt="ВКонтакте">
             </a>
           </li>
-          <li>
+          <li class="social">
             <a href="https://t.me/htmlacademy ">
-              <span class="visually-hidden">
-                Телеграм
-              </span>
+              <img src="./images/footer/telegram.svg" width="18" height="16" alt="Телеграм">
             </a>
           </li>
-          <li>
+          <li class="social">
             <a href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">
-                YouTube
-              </span>
+              <img src="./images/footer/youtube.svg" width="22" height="17" alt="YouTube">
             </a>
           </li>
         </ul>
-        <a href="tel:+78128121212">
+        <a class="phone-number" href="tel:+78128121212">
           +7 (812) 812-12-12
         </a>
         <a href="https://htmlacademy.ru">
